temporarily changed img path

--- a/index.html
+++ b/index.html
@@ -142,7 +142,7 @@
 
     const overlayImage = document.getElementById('overlay_image');
 
-    const images = ['/img/concrete1.jpg', '/img/concrete2.jpg', '/img/concrete3.jpg'];
+    const images = ['img/concrete1.jpg', 'img/concrete2.jpg', 'img/concrete3.jpg'];
 
     var imageToShow = images[0];
 
